<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/home_margin_top"
>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tv_user_name"
              android:text="@string/label_name"
              android:textColor="@color/labelColor"
              android:textSize="50sp"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/et_name"
              android:hint="@string/hint_name"
              android:layout_marginTop="@dimen/home_margin_top"
              android:inputType="text" />

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:textSize="20sp"
            android:text="@string/label_save"
            android:layout_marginTop="@dimen/home_margin_top"
            android:layout_marginBottom="@dimen/home_margin_top"
            android:layout_gravity="center_horizontal"
            android:background="#CDDC39"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="2">

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/et_number_one"
                  android:hint="Enter a number"
                  android:textSize="30sp"
                  android:textAlignment="center"
                  android:inputType="number"
                  android:layout_marginTop="@dimen/home_margin_top"
                  android:layout_weight="1"/>

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/et_number_two"
                  android:hint="Enter a number"
                  android:textSize="30sp"
                  android:textAlignment="center"
                  android:inputType="number"
                  android:layout_marginTop="@dimen/home_margin_top"
                  android:layout_weight="1"/>

    </LinearLayout>

    <TextView android:layout_width="100dp"
              android:layout_height="80dp"
              android:id="@+id/tv_result"
              android:layout_marginTop="@dimen/home_margin_top"
              android:layout_marginBottom="@dimen/home_margin_top"
              android:textSize="45sp"
              android:layout_gravity="center"
              android:background="#000000"
              android:textStyle="bold"
              android:textAlignment="center"
              android:textColor="#FFFFFF"
              android:padding="@dimen/home_margin_top"
              android:text=""/>

    <GridLayout android:layout_width="350dp"
                android:layout_height="250dp"
                android:id="@+id/grid_button"
                android:rowCount="2"
                android:columnCount="2"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/home_margin_top">

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_add"
                android:textSize="20sp"
                android:text="@string/btn_add"
                android:layout_marginTop="@dimen/home_margin_top"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="#2196F3"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_subtract"
                android:textSize="20sp"
                android:text="@string/btn_subtract"
                android:layout_marginTop="@dimen/home_margin_top"
                android:background="#CDDC39"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:layout_rowWeight="1"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_multiply"
                android:textSize="20sp"
                android:text="@string/btn_multiply"
                android:layout_marginTop="@dimen/home_margin_top"
                android:background="#FFEB3B"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:layout_rowWeight="1"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_divide"
                android:textSize="20sp"
                android:text="@string/btn_divide"
                android:layout_marginTop="@dimen/home_margin_top"
                android:background="#009688"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:layout_rowWeight="1"
                />
    </GridLayout>

</LinearLayout>